--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "basedpyright>=1.34.0",
+    "loguru>=0.7.3",
     "ruff>=0.14.6",
 ]
